--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
 }
 body{
   font-family: "Poppins" , sans-serif;
-  /* display: flex;
-  justify-content: center; */
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
 
 }
 
